# EratoSCP

./: Makefile.am  configure.ac
src/: Makefile.am  aboutdialog.py  aboutdialog.xml  eratoscp.py  filetransfer.py  mainwindow.py  mainwindow.xml  mountremote.py  optionsdialog.py  optionsdialog.xml  validate.py
